examples/core/errors/type_errors/07_hole.output.txt

error[E0106]: Unsolved hole
  ┌─ input:3:2
1 │ // Hole with identifier
2 │ // Used as a placeholder during development
3 │ ?1
     ^
4 │ 
  = note: Hole #1 was not solved during type checking
  = hint: Holes are placeholders that must be filled
  = hint: Provide a term of the expected type, or add a type annotation

